# matrixvox_client

./: .gitmodules  Cargo.toml
src/: client.rs  current.rs  data.rs  main.rs
src/current/: circlesoid.rs  mod.rs  sinusoid.rs  text.rs  walking_cube.rs
